--- a/package.json
+++ b/package.json
@@ -25,15 +25,19 @@
     "express": "^4.16.2"
   },
   "devDependencies": {
-    "uglify-es": "^3.3.4",
-    "helmet": "^3.9.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
+    "gulp-sourcemaps": "^2.6.3",
     "gulp-uglify": "^3.0.0",
+    "helmet": "^3.9.0",
     "nsp": "^3.1.0",
     "pump": "^2.0.0",
     "snyk": "^1.63.0",
+    "uglify-es": "^3.3.4",
     "watch": "^1.0.2"
   },
   "config": {
