--- a/package.json
+++ b/package.json
@@ -11,23 +11,29 @@
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.0",
+    "react-scripts": "2.1.5",
     "styled-components": "^3.1.6",
-    "styled-reset": "^1.0.1"
+    "styled-reset": "^1.0.1",
+    "waait": "^1.0.4"
   },
   "devDependencies": {
     "cross-env": "^5.1.3",
     "fetch-mock": "^6.0.0",
     "jest-styled-components": "^4.11.0-1",
-    "react-test-renderer": "^16.2.0",
-    "redux-mock-store": "^1.5.1"
+    "react-test-renderer": "^16.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "test:once": "cross-env CI=true react-scripts test --env=jsdom",
+    "test": "react-scripts test",
+    "test:once": "cross-env CI=true react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:4000"
+  "proxy": "http://localhost:4000",
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
