--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "2.1.5",
     "styled-components": "^3.1.6",
-    "styled-reset": "^1.0.1",
-    "waait": "^1.0.4"
+    "styled-reset": "^1.0.1"
   },
   "devDependencies": {
     "cross-env": "^5.1.3",
     "fetch-mock": "^6.0.0",
     "jest-styled-components": "^4.11.0-1",
-    "react-test-renderer": "^16.2.0"
+    "react-test-renderer": "^16.2.0",
+    "waait": "^1.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,7 +29,6 @@
     "test:once": "cross-env CI=true react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:4000",
   "browserslist": [
     ">0.2%",
     "not dead",
