--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "gatsby-plugin-manifest": "^2.2.48",
     "gatsby-plugin-offline": "^3.0.41",
     "gatsby-plugin-react-helmet": "^3.1.24",
+    "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sharp": "^2.4.13",
+    "gatsby-plugin-sitemap": "^2.3.1",
     "gatsby-source-filesystem": "^2.1.56",
     "gatsby-source-graphql": "2.3.0",
     "gatsby-transformer-sharp": "^2.3.19",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "slugify": "^1.4.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
