--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,9 @@
       "jsx": true // Allows for the parsing of JSX
     }
   },
-  "rules": {},
+  "rules": {
+    "react/jsx-no-target-blank": 1
+  },
   "settings": {
     "react": {
       "version": "detect"
